// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentToggle renders ContentToggle 1`] = `
<div
  className="test c-ContentToggle c-ContentToggle--accordion c-ContentToggle--open"
  onClick={[Function]}
>
  <Button
    appearance="link"
    className="c-ContentToggle__header"
    iconPos="left"
    mode="button"
    size="delta"
  >
    some test header value
    <ChevronLeftIcon
      className="c-ContentToggle__icon"
    />
  </Button>
  <div
    className="c-ContentToggle__content"
  >
    <p>
      Some ContentToggle test text.
    </p>
  </div>
</div>
`;

exports[`ContentToggle renders closed & disabled ContentToggle 1`] = `
<div
  className="test c-ContentToggle c-ContentToggle--accordion c-ContentToggle--disabled"
  onClick={[Function]}
>
  <Button
    appearance="link"
    className="c-ContentToggle__header"
    iconPos="left"
    mode="button"
    size="delta"
  >
    some test header value
    <ChevronLeftIcon
      className="c-ContentToggle__icon"
    />
  </Button>
  <div
    className="c-ContentToggle__content"
  >
    <p>
      Some ContentToggle test text.
    </p>
  </div>
</div>
`;
